cmake_minimum_required(VERSION 3.1) 
set (CMAKE_CXX_STANDARD 11)
PROJECT (face_annotation)
find_package(OpenCV REQUIRED )
set( NAME_SRC
    src/main.cpp    
)

set( NAME_HEADERS       

)

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include )
link_directories( ${CMAKE_BINARY_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
add_executable( face_annotation ${NAME_SRC} ${NAME_HEADERS} )

target_link_libraries( face_annotation ${OpenCV_LIBS} )
